--- a/CoffeeShopManagement/CoffeeShopManagement/Form/Staff/fStaffInfo.resx
+++ b/CoffeeShopManagement/CoffeeShopManagement/Form/Staff/fStaffInfo.resx
@@ -118,6 +118,167 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAABdwAAAMgCAIAAAC21zdrAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAJEFJREFUeF7t3U+P3vV59mFMGzslqaiEWFSAu6nwRKJrhCPFQvMWyPNK+l7qSUIe
+        CZJ22TR9IqWqZKlAo6rGialEYGYwCeZPE7CNjUrGxDNSnfZ8sri7cM651Px+wPHRsf/ONctT99xz3//5
+        6l8AAAAA8HtmlAEAAABYgFEGAAAAYAFGGQAAAIAFGGUAAAAAFmCUAQAAAFiAUQYAAABgAUYZAAAAgAUY
+        ZQAAAAAWYJQBAAAAWIBRBgAAAGABRhkAAACABRhlAAAAABZglAEAAABYgFEGAAAAYAFGGQAAAIAFGGUA
+        AAAAFmCUAQAAAFiAUQYAAABgAUYZAAAAgAUYZQAAAAAWYJQBAAAAWMBolHnm7BNPnTl9+uE/+dKpk/ef
+        OHGfJEmSJEnSZ7c//IP7//iPTp1++E+eOnP6mbNPbOwkreOPMl/d+rMvf/Hk008/ff78+d3d3YODgyNJ
+        kiRJkqTPbgcHB7u7u+fPn3/66ae//MWTZ7f+bGMtqRxnlPn62Se2Hnl4a2vrwoUL+aEkSZIkSZI+T124
+        cGHrbo88/PXjfmTmOKPM3fe+9rWvffjhh/kpJEmSJEmSPn/dvHnz3LlzW488vLGc/I7qUebs1ukzZ87c
+        uHEj70uSJEmSJH1eu3HjxtbW1tmt0xv7ye+iG2WeOfvEA6dOvvDCC3lZkiRJkiTp892LL774wKmTx/je
+        326UefLxx7a3t/OmJEmSJEmSjo62t7effPyxjRXlnrpR5tGHHtzZ2cmDkiRJkiRJOjra2dl59KEHN1aU
+        e+pGmQdOfWF3dzcPSpIkSZIk6ehob2/vgVNf2FhR7qkbZe6//8TBwUEelCRJkiRJ0tHRwcHB/SdObKwo
+        99SNMvfdd19ekyRJkiRJ0v/vvvu6jeUuo4wkSZIkSdI0o4wkSZIkSdICGWUkSZIkSZIWyCgjSZIkSZK0
+        QEYZSZIkSZKkBTLKSJIkSZIkLZBRRpIkSZIkaYGMMpIkSZIkSQtklJEkSZIkSVogo4wkSZIkSdICGWUk
+        SZIkSZIWyCgjSZIkSZK0QEYZSZIkSZKkBTLKSJIkSZIkLZBRRpIkSZIkaYGMMpIkSZIkSQtklJEkSZIk
+        SVogo4wkSZIkSdICGWUkSZIkSZIWyCgjSZIkSZK0QEYZSZIkSZKkBTLKSJIkSZIkLZBRRpIkSZIkaYGM
+        MpIkSZIkSQtklJEkSZIkSVogo4wkSZIkSdICGWUkSZIkSZIWyCgjSZIkSZK0QEYZSZIkSZKkBTLKSJIk
+        SZIkLZBRRpIkSZIkaYGMMpIkSZIkSQtklJEkSZIkSVogo4wkSZIkSdICGWUkSZIkSZIWyCgjSZIkSZK0
+        QEYZSZIkSZKkBTLKSJIkSZIkLdDCo8zz5/8SAAAA4DMsI8j/yCdlJEmSJEmSFsgoI0mSJEmStEBGGUmS
+        JEmSpAUyykiSJEmSJC2QUUaSJEmSJGmBjDKSJEmSJEkLZJSRJEmSJElaIKOMJEmSJEnSAhllJEmSJEmS
+        FuhTMMp8cnDr+r+/8s7uD9748bd3//WvAAAAAJayf+nZt1//++vvXb79qw+PDg8zXhyrtY8ydy/85c9f
+        2r/07b2LOxu/BQAAAIDfv72LO/uXnv3Fz/7p9sc3sl8cq1WPMrd/9eHbu/9v7+VvbhwPAAAAsKy9i994
+        +/XvH3x8PStG33pHmTt3Pnln9wc+IAMAAACs097Fnauvff/Xn3ycLaNsvaPM+2//i0UGAAAAWLO9izu/
+        fOufs2WUrXSU+eT2R/uXnt24EwAAAGBt9l7+5m++9LdvpaPM9fd+snEhAAAAwDpde+flLBpNKx1lrv70
+        exvnAQAAAKzTWz/92ywaTSsdZd748f/dOA8AAABgnfYvPZtFo2mlo4yv+AUAAAA+RbJoNK10lNm9eH7j
+        NgAAAIDVyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFklAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotFk
+        lAEAAACYyqLRZJQBAAAAmMqi0WSUAQAAAJjKotG00lFm7+VvbtwGAAAAsFpZNJpWOspcufzcxm0AAAAA
+        67R/6dksGk0rHWWuvva9jfMAAAAA1umtn/5tFo2mlY4y19798cZ5AAAAAOt07Z2Xs2g0rXSU+eTgo/1L
+        z25cCAAAALA2ey9/8/avPsyi0bTSUeZu71/9l72LOxt3AgAAAKzH3sWdX771z9kyytY7yty5c/ud3R/Y
+        ZQAAAIB12ru4c/W17//6k4+zZZStd5S52+1ffXj1tb/z77EBAACAtdm7+I2rP/3ewX9cy4rRt+pR5m4H
+        H1//5c9f2r/0bR+ZAQAAANZg7+LO/qVnf/Gzf5osMndb+yhzt08Obl3/91fefv3vffUvAAAAsKz9S9+6
+        +trfXX/vJ7/5ct/Dw4wXx+pTMMpIkiRJkiR99jLKSJIkSZIkLZBRRpIkSZIkaYGMMpIkSZIkSQtklJEk
+        SZIkSVogo4wkSZIkSdICGWUkSZIkSZIWyCgjSZIkSZK0QEYZSZIkSZKkBTLKSJIkSZIkLZBRRpIkSZIk
+        aYGMMpIkSZIkSQtklJEkSZIkSVogo4wkSZIkSdICLTzKPH/+LwEAAAA+wzKC/I98UkaSJEmSJGmBjDKS
+        JEmSJEkLZJSRJEmSJElaIKOMJEmSJEnSAhllJEmSJEmSFsgoI0mSJEmStEBGGUmSJEmSpAUyykiSJEmS
+        JC2QUUaSJEmSJGmBjDKSJEmSJEkLZJSRJEmSJElaIKOMJEmSJEnSAhllJEmSJEmSFujTMcocHt65dW3/
+        vTf+8c3L39m7uLP7r38FAAAA8Pu0//K3fvZvf/PeG/9469r+4eGdbBaDPgWjzEfXr7z5ync3fhEAAAAA
+        S3nzle/euv5Glovjtu5R5vDw/as/2jgbAAAAYA3ev/qjo8PDjBh9qx5lLDIAAADAmv1mlzlu6x1lbl3b
+        37gTAAAAYG1uXdvPllG20lHm8PDOlcvPbRwJAAAAsDZXfvLc8b73d6WjzM0PdjcuBAAAAFinmx+8nkWj
+        aaWjzLv7/7BxHgAAAMA6vbv/wywaTSsdZa5cfn7jPAAAAIB1unL5+SwaTSsdZfYufmPjPAAAAIB12ru4
+        k0WjaaWjzMZtAAAAAGuWRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgDAAAAMJVFo8koAwAAADCVRaPJKAMAAAAwlUWjySgD
+        AAAAMJVFo2mlo8z+pW9t3AYAAACwTnsXd7JoNK10lHnz3/564zwAAACAdbpy+fksGk0rHWXe3f+HjfMA
+        AAAA1und/R9m0Wha6Shz84PdjfMAAAAA1unmB69n0Wha6ShzeHjnyuXnNi4EAAAAWJsrP3nu8PDXWTSa
+        VjrK3O3Wtf2NIwEAAADW5ta1/WwZZesdZe72/ls/2rgTAAAAYD3ef+tHWTH6Vj3KHB0e/uLnL2xcCwAA
+        ALAGv/jZC0eHhxkx+tY9yvxXt6698eYr3904GwAAAGApb77y3WP/1dJv+xSMMnc7PLxz84Pdd/d/+Obl
+        7+xd3Nn4RQAAAAD8b9u7uPPm5e+8u//Dmx/sHh7eyWYx6NMxykiSJEmSJH3GMspIkiRJkiQtkFFGkiRJ
+        kiRpgYwykiRJkiRJC2SUkSRJkiRJWiCjjCRJkiRJ0gIZZSRJkiRJkhbIKCNJkiRJkrRARhlJkiRJkqQF
+        MspIkiRJkiQtkFFGkiRJkiRpgYwykiRJkiRJC2SUkSRJkiRJWqD/9VHmD//g/ps3b+Y1SZIkSZIkHR0d
+        HBzcf+LExopyT90o88d/dOrVV1/Ng5IkSZIkSTo62tvbe+DUFzZWlHvqRplHH3pwZ2cnD0qSJEmSJOno
+        aGdn59GHHtxYUe6pG2WefPyx7e3tPChJkiRJkqSjo+3t7Scff2xjRbmnbpR55uwTD5w6+eKLL+ZNSZIk
+        SZKkz3cvvfTSA6dOPvPUExsryj11o8xdT505/ZWvfOXGjRt5WZIkSZIk6fPajRs3tra2njpzemM/+V3U
+        o8xdZx55+Ny5c/4NkyRJkiRJ+jx38+bNc+fOnXnk4Y3l5Hd0nFHm62ef+PM/fWhra+vChQv5KSRJkiRJ
+        kj5PXbhwYWtr68//9KGvn63/cOm/HWeU+W9nt05/+Ysnt7e3d3Z29vf3b9++nR9KkiRJkiTps9hHH330
+        6quv7uzsbG9vf/mLJ89uHeevln7r+KPMXc+cfeLJxx979KEHv3Tq5P0nTtwnSZIkSZL02e3+Eye+dOrk
+        ow89+OTjjz1z3A/I/NZolAEAAADgeIwyAAAAAAswygAAAAAswCgDAAAAsACjDAAAAMACjDIAAAAACzDK
+        AAAAACzAKAMAAACwAKMMAAAAwAKMMgAAAAALMMoAAAAALMAoAwAAALAAowwAAADA791X/+I/AQPxMrVj
+        8y1xAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAkAAAAAAAEAIAAYHgAAlgAAAICAAAABACAAKAgBAK4eAABgYAAAAQAgAKiUAADWJgEASEgAAAEA
